fix product-options box-shadow not rendering properly on Safari

--- a/src/components/product-options/style.sass
+++ b/src/components/product-options/style.sass
@@ -14,7 +14,7 @@ $desc-color: #424243
   height: 33vw
   transform: translate(-50%, -50%)
   background: $white
-  box-shadow: 0 0 0 100vmax transparentize($actually-black, .75), 0 .2rem .65rem -.3rem transparentize($actually-black, .65)
+  box-shadow: 0 0 0 1000px transparentize($actually-black, .75), 0 .2rem .65rem -.3rem transparentize($actually-black, .65)
   padding: 2.2rem 0
   border-radius: .5rem
   display: flex
